cmake_minimum_required(VERSION 3.10)
project(solucionario_ticademia C)

set(CMAKE_C_STANDARD 11)

add_executable(101 101.c)
add_executable(102 102.c)
add_executable(103 103.c)
add_executable(104 104.c)
add_executable(105 105.c)
add_executable(106 106.c)
add_executable(107 107.c)
add_executable(108 108.c)
add_executable(109 109.c)
add_executable(110 110.c)
add_executable(111 111.c)
add_executable(112 112.c)
